Bug 197152 AccDoAction failed with menuitem that has command (not oncommand) attribute r=bryner, sr=jag move command tag support from individual frames to nsXULElement